# python-acoustics

./: .gitignore  README.md  coverage.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  onCreate.sh
.github/: ISSUE_TEMPLATE.md  dependabot.yaml
.github/workflows/: ci.yml  python.yml
acoustics/: __init__.py  _signal.py  aio.py  ambisonics.py  atmosphere.py  bands.py  building.py  cepstrum.py  criterion.py  decibel.py  descriptors.py  directivity.py  doppler.py  generator.py  imaging.py  octave.py  power.py  quantity.py  reflection.py  room.py  signal.py  utils.py  weighting.py
acoustics/standards/: __init__.py  iec_61260_1_2014.py  iec_61672_1_2013.py  iso_1683_2015.py  iso_1996_1_2003.py  iso_1996_2_2007.py  iso_9613_1_1993.py  iso_tr_25417_2007.py
docs/: conf.py
examples/: example_octave.py  example_signal.py
tests/: test__signal.py  test_aio.py  test_atmosphere.py  test_bands.py  test_building.py  test_cepstrum.py  test_criterion.py  test_decibel.py  test_descriptors.py  test_directivity.py  test_generator.py  test_imaging.py  test_octave.py  test_power.py  test_room.py  test_signal.py  test_utils.py  test_weighting.py
tests/standards/: test_iec_61672_1_2013.py  test_iso_1996_2_2007.py  test_iso_tr_25417_2007.py
