[tool.poetry]
name = "acoustics"
version = "0.2.6"
description = "Acoustics module for Python."
authors = []
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
six = "^1.16.0"
pandas = "^2.2.1"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
black = "^24.2.0"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
